- [helpers] fixed wrongly named variable in `spacing`

--- a/helpers/_spacing.scss
+++ b/helpers/_spacing.scss
@@ -29,13 +29,13 @@
 .margin--ends          { margin-top:    $base-spacing-unit !important; margin-bottom: $base-spacing-unit !important; }
 .margin--sides         { margin-right:  $base-spacing-unit !important; margin-left:   $base-spacing-unit !important; }
 
-.margin\+              { margin:        $double-spacing-unit !important; }
-.margin--top\+         { margin-top:    $double-spacing-unit !important; }
-.margin--right\+       { margin-right:  $double-spacing-unit !important; }
-.margin--bottom\+      { margin-bottom: $double-spacing-unit !important; }
-.margin--left\+        { margin-left:   $double-spacing-unit !important; }
-.margin--ends\+        { margin-top:    $double-spacing-unit !important; margin-bottom: $double-spacing-unit !important; }
-.margin--sides\+       { margin-right:  $double-spacing-unit !important; margin-left:   $double-spacing-unit !important; }
+.margin\+              { margin:        $twice-spacing-unit !important; }
+.margin--top\+         { margin-top:    $twice-spacing-unit !important; }
+.margin--right\+       { margin-right:  $twice-spacing-unit !important; }
+.margin--bottom\+      { margin-bottom: $twice-spacing-unit !important; }
+.margin--left\+        { margin-left:   $twice-spacing-unit !important; }
+.margin--ends\+        { margin-top:    $twice-spacing-unit !important; margin-bottom: $twice-spacing-unit !important; }
+.margin--sides\+       { margin-right:  $twice-spacing-unit !important; margin-left:   $twice-spacing-unit !important; }
 
 .margin--flush         { margin:        0 !important; }
 .margin--top--flush    { margin-top:    0 !important; }
@@ -64,13 +64,13 @@
 .bleed--ends          { margin-top:    -$base-spacing-unit !important; margin-bottom: -$base-spacing-unit !important; }
 .bleed--sides         { margin-right:  -$base-spacing-unit !important; margin-left:   -$base-spacing-unit !important; }
 
-.bleed\+              { margin:        -$double-spacing-unit !important; }
-.bleed--top\+         { margin-top:    -$double-spacing-unit !important; }
-.bleed--right\+       { margin-right:  -$double-spacing-unit !important; }
-.bleed--bottom\+      { margin-bottom: -$double-spacing-unit !important; }
-.bleed--left\+        { margin-left:   -$double-spacing-unit !important; }
-.bleed--ends\+        { margin-top:    -$double-spacing-unit !important; margin-bottom: -$double-spacing-unit !important; }
-.bleed--sides\+       { margin-right:  -$double-spacing-unit !important; margin-left:   -$double-spacing-unit !important; }
+.bleed\+              { margin:        -$twice-spacing-unit !important; }
+.bleed--top\+         { margin-top:    -$twice-spacing-unit !important; }
+.bleed--right\+       { margin-right:  -$twice-spacing-unit !important; }
+.bleed--bottom\+      { margin-bottom: -$twice-spacing-unit !important; }
+.bleed--left\+        { margin-left:   -$twice-spacing-unit !important; }
+.bleed--ends\+        { margin-top:    -$twice-spacing-unit !important; margin-bottom: -$twice-spacing-unit !important; }
+.bleed--sides\+       { margin-right:  -$twice-spacing-unit !important; margin-left:   -$twice-spacing-unit !important; }
 
 
 
@@ -94,13 +94,13 @@
 .padding--ends          { padding-top:    $base-spacing-unit !important; padding-bottom: $base-spacing-unit !important; }
 .padding--sides         { padding-right:  $base-spacing-unit !important; padding-left:   $base-spacing-unit !important; }
 
-.padding\+              { padding:        $double-spacing-unit !important; }
-.padding--top\+         { padding-top:    $double-spacing-unit !important; }
-.padding--right\+       { padding-right:  $double-spacing-unit !important; }
-.padding--bottom\+      { padding-bottom: $double-spacing-unit !important; }
-.padding--left\+        { padding-left:   $double-spacing-unit !important; }
-.padding--ends\+        { padding-top:    $double-spacing-unit !important; padding-bottom: $double-spacing-unit !important; }
-.padding--sides\+       { padding-right:  $double-spacing-unit !important; padding-left:   $double-spacing-unit !important; }
+.padding\+              { padding:        $twice-spacing-unit !important; }
+.padding--top\+         { padding-top:    $twice-spacing-unit !important; }
+.padding--right\+       { padding-right:  $twice-spacing-unit !important; }
+.padding--bottom\+      { padding-bottom: $twice-spacing-unit !important; }
+.padding--left\+        { padding-left:   $twice-spacing-unit !important; }
+.padding--ends\+        { padding-top:    $twice-spacing-unit !important; padding-bottom: $twice-spacing-unit !important; }
+.padding--sides\+       { padding-right:  $twice-spacing-unit !important; padding-left:   $twice-spacing-unit !important; }
 
 .padding--flush         { padding:        0 !important; }
 .padding--top--flush    { padding-top:    0 !important; }
